tests/snapshots/snapshot_tests__array_tiling_rew.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_rew.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 (+ i+0 1) val1+0) (+ i+0 1)) val1+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 1 3) 1) 3)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 i+0 val2+0) i+0) val2+0)",
        "(=> (not (= 0 (+ i+0 1))) (= (Read_Int_Int (Write_Int_Int a+0 (+ i+0 1) val1+0) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= Z (+ i+0 1))) (= (Read_Int_Int (Write_Int_Int a+0 (+ i+0 1) val1+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z 1)) (= (Read_Int_Int (Write_Int_Int a+0 1 3) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z S)) (= (Read_Int_Int (Write_Int_Int a1+0 S Z) Z) (Read_Int_Int a1+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a1+0 i+0 val2+0) Z) (Read_Int_Int a1+0 Z)))",
        "(=> (not (= i+0 1)) (= (Read_Int_Int (Write_Int_Int a+0 1 3) i+0) (Read_Int_Int a+0 i+0)))",
        "(=> (not (= i+0 1)) (= (Read_Int_Int (Write_Int_Int a+2 1 3) i+0) (Read_Int_Int a+2 i+0)))",
        "(=> (not (= i+0 i+1)) (= (Read_Int_Int (Write_Int_Int a1+1 i+1 val2+1) i+0) (Read_Int_Int a1+1 i+0)))",
        "(=> (not (= i+0 i+2)) (= (Read_Int_Int (Write_Int_Int a1+2 i+2 val2+2) i+0) (Read_Int_Int a1+2 i+0)))",
    ],
}
