tests/snapshots/snapshot_tests__array_tiling_skipped.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_skipped.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) (* 2 i+0)) (* 2 i+0)) (* 2 i+0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (+ (* 2 i+0) 1) (+ (* 2 i+0) 1)) (+ (* 2 i+0) 1)) (+ (* 2 i+0) 1))",
        "(=> (not (= 1 (* 2 i+0))) (= (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) (* 2 i+0)) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= S (* 2 i+0))) (= (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) (* 2 i+0)) S) (Read_Int_Int a+0 S)))",
        "(=> (not (= Z (* 2 i+0))) (= (Read_Int_Int (Write_Int_Int a+0 (* 2 i+0) (* 2 i+0)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z (+ (* 2 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a1+0 (+ (* 2 i+0) 1) (+ (* 2 i+0) 1)) Z) (Read_Int_Int a1+0 Z)))",
    ],
}
