tests/snapshots/snapshot_tests__array_tiling_tcpy2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_tcpy2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 5 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 5 S) (+ i+0 1)))) (- (* 5 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 5 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy0+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) (- (* 4 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy0+0 S 16) S) 16)",
        "(= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) (- (* 3 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) (- (* 2 S) (+ i+0 1))) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) i+0) (Read_Int_Int a+0 i+0))",
        "(=> (not (= (* 2 S) (- (* 5 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 5 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 5 S) (+ i+0 1)))) (* 2 S)) (Read_Int_Int acopy+0 (* 2 S))))",
        "(=> (not (= (* 3 S) (- (* 2 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) (* 3 S)) (Read_Int_Int acopy2+0 (* 3 S))))",
        "(=> (not (= (* 3 S) (- (* 3 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) (* 3 S)) (Read_Int_Int acopy1+0 (* 3 S))))",
        "(=> (not (= (* 3 S) i+0)) (= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) (* 3 S)) (Read_Int_Int acopy3+0 (* 3 S))))",
        "(=> (not (= 0 (- (* 5 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 5 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 5 S) (+ i+0 1)))) 0) (Read_Int_Int acopy+0 0)))",
        "(=> (not (= 0 S)) (= (Read_Int_Int (Write_Int_Int acopy0+0 S 16) 0) (Read_Int_Int acopy0+0 0)))",
        "(=> (not (= 3 (- (* 2 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) 3) (Read_Int_Int acopy2+0 3)))",
        "(=> (not (= 3 (- (* 3 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) 3) (Read_Int_Int acopy1+0 3)))",
        "(=> (not (= 3 (- (* 4 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy0+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) 3) (Read_Int_Int acopy0+0 3)))",
        "(=> (not (= 3 (- (* 5 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 5 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 5 S) (+ i+0 1)))) 3) (Read_Int_Int acopy+0 3)))",
        "(=> (not (= 3 i+0)) (= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) 3) (Read_Int_Int acopy3+0 3)))",
        "(=> (not (= 4 (- (* 3 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) 4) (Read_Int_Int acopy1+0 4)))",
        "(=> (not (= 4 (- (* 4 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy0+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) 4) (Read_Int_Int acopy0+0 4)))",
        "(=> (not (= S (- (* 2 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) S) (Read_Int_Int acopy2+0 S)))",
        "(=> (not (= S (- (* 3 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) S) (Read_Int_Int acopy1+0 S)))",
        "(=> (not (= S (- (* 4 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy0+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) S) (Read_Int_Int acopy0+0 S)))",
        "(=> (not (= S (- (* 5 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 5 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 5 S) (+ i+0 1)))) S) (Read_Int_Int acopy+0 S)))",
        "(=> (not (= S i+0)) (= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) S) (Read_Int_Int acopy3+0 S)))",
        "(=> (not (= Z (- (* 2 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy2+0 (- (* 2 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 2 S) (+ i+0 1)))) Z) (Read_Int_Int acopy2+0 Z)))",
        "(=> (not (= Z (- (* 3 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy1+0 (- (* 3 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 3 S) (+ i+0 1)))) Z) (Read_Int_Int acopy1+0 Z)))",
        "(=> (not (= Z (- (* 4 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy0+0 (- (* 4 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 4 S) (+ i+0 1)))) Z) (Read_Int_Int acopy0+0 Z)))",
        "(=> (not (= Z (- (* 5 S) (+ i+0 1)))) (= (Read_Int_Int (Write_Int_Int acopy+0 (- (* 5 S) (+ i+0 1)) (Read_Int_Int a+0 (- (* 5 S) (+ i+0 1)))) Z) (Read_Int_Int acopy+0 Z)))",
        "(=> (not (= Z S)) (= (Read_Int_Int (Write_Int_Int acopy0+0 S 16) Z) (Read_Int_Int acopy0+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int acopy3+0 i+0 (Read_Int_Int a+0 i+0)) Z) (Read_Int_Int acopy3+0 Z)))",
    ],
}
