tests/snapshots/snapshot_tests__array_tripl_access_init.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tripl_access_init.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (+ (* 3 i+0) 1) 0) (+ (* 3 i+0) 2) 0) (+ (* 3 i+0) 2)) 0)",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (+ (* 3 i+0) 1) 0) (+ (* 3 i+0) 1)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (* 3 i+0)) 0)",
        "(=> (not (= N (+ (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (+ (* 3 i+0) 1) 0) (+ (* 3 i+0) 2) 0) N) (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (+ (* 3 i+0) 1) 0) N)))",
        "(=> (not (= Z (* 3 i+0))) (= (Read_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z (+ (* 3 i+0) 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (+ (* 3 i+0) 1) 0) Z) (Read_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) Z)))",
        "(=> (not (= Z (+ (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (+ (* 3 i+0) 1) 0) (+ (* 3 i+0) 2) 0) Z) (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 (* 3 i+0) 0) (+ (* 3 i+0) 1) 0) Z)))",
    ],
}
